<resources>
    <string name="app_name">lab4ost</string>
    <string name="task_title">task_title</string>
    <string name="task_description">task_description</string>
    <string name="add_task">add_task</string>
    <string name="default_title" />
    <string name="default_description" />

    <string-array name="images">
        <item>drawable 1</item>
        <item>drawable 2</item>
        <item>drawable 3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_selected_msg" />
    <string name="delete_question">Delete contact? </string>
    <string name="dialog_confirm">Delete</string>
    <string name="dialog_cancel" >Cancel </string>
    <string name="delete_dialog_tag" ></string>
    <string name="long_click_msg" />
    <string name="retry_msg" />
    <string name="delete_cancel_msg" />
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="birthday">brithday</string>
    <string name="number">number</string>
    <string name="add">add</string>
    <string name="call_dialog_tag" >Call</string>
    <string name="call_question" >Call</string>
    <string name="call_confirm" >Yes</string>
    <string name="call_cancel" >Cancel</string>
</resources>
